@@ -32,10 +32,11 @@ coverage_cutoff = 65
 #          21-Nov-2019 jdw py27->py38 update black version
 #          21-Nov-2019 jdw py27->py38 update black version
 #          23-Dec-2022 aae updates for tox 4
+#           9-Dec-2024 dwp py310 version
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
-envlist = format_pep8-{py39}, lint_pylint-{py39}, format_black-{py39}, py{39}, test_coverage-{py39}
+envlist = format_pep8-{py310}, lint_pylint-{py310}, format_black-{py310}, py{310}, test_coverage-{py310}
 #
 minversion = 3.4.0
 skip_missing_interpreters = true
@@ -44,11 +45,11 @@ skipsdist = false
 [testenv]
 passenv = CONFIG_SUPPORT_TOKEN_ENV
 allowlist_externals = echo
-basepython = py39: python3.9
+basepython = py310: python3.10
 commands =
     echo "Starting default tests in testenv"
 
-[testenv:py39]
+[testenv:py310]
 description = 'Run unit tests (unittest runner) using {envpython}'
 platform=
        macos: darwin
@@ -69,7 +70,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_pep8-py39]
+[testenv:format_pep8-py310]
 description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
@@ -85,7 +86,7 @@ commands =
     flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
 
 #
-[testenv:lint_pylint-py39]
+[testenv:lint_pylint-py310]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
@@ -99,7 +100,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_black-py39]
+[testenv:format_black-py310]
 description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
@@ -115,7 +116,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:test_coverage-py39]
+[testenv:test_coverage-py310]
 description = 'Run test coverage analysis'
 platform=
        macos: darwin
